--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^7.13.4",
     "@tabler/icons-react": "^3.21.0",
     "@tanstack/react-router": "^1.77.6",
+    "bignumber.js": "^9.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
