--- a/package.json
+++ b/package.json
@@ -1,43 +1,41 @@
 {
-  "name": "chirpr",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@mantine/core": "^7.13.4",
-    "@mantine/hooks": "^7.13.4",
-    "@tabler/icons-react": "^3.21.0",
-    "@tanstack/react-router": "^1.77.6",
-    "bignumber.js": "^9.1.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@eslint/js": "^9.13.0",
-    "@tanstack/router-devtools": "^1.77.6",
-    "@tanstack/router-plugin": "^1.76.4",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.13",
-    "globals": "^15.11.0",
-    "postcss": "^8.4.47",
-    "postcss-preset-mantine": "^1.17.0",
-    "postcss-simple-vars": "^7.0.1",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.10.0",
-    "vite": "^5.4.9"
-  },
-  "volta": {
-    "node": "22.11.0"
-  }
+	"name": "chirpr",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "@biomejs/biome lint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@mantine/core": "^7.13.4",
+		"@mantine/form": "^7.13.4",
+		"@mantine/hooks": "^7.13.4",
+		"@tabler/icons-react": "^3.18.0",
+		"@tanstack/react-router": "1.78.2",
+		"bignumber.js": "^9.1.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"zustand": "^5.0.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@tanstack/router-devtools": "1.78.2",
+		"@tanstack/router-plugin": "1.78.2",
+		"@types/react": "^18.3.11",
+		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react-swc": "^3.5.0",
+		"globals": "^15.11.0",
+		"postcss": "^8.4.47",
+		"postcss-preset-mantine": "^1.17.0",
+		"postcss-simple-vars": "^7.0.1",
+		"typescript": "~5.6.2",
+		"typescript-eslint": "^8.10.0",
+		"vite": "^5.4.9"
+	},
+	"volta": {
+		"node": "22.11.0"
+	}
 }
